# QTrial

./: .env.example  .gitignore  Cargo.toml  README.md  claude.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: main.rs
db/docker-init/: 01-create-databases.sql
db/migrations/: 20260419120000_baseline.down.sql  20260419120000_baseline.sql  20260419120100_create_registries.down.sql  20260419120100_create_registries.up.sql  20260419120200_seed_registries.down.sql  20260419120200_seed_registries.up.sql  20260419120300_create_akc_fee_schedules.down.sql  20260419120300_create_akc_fee_schedules.up.sql  20260419120400_seed_akc_fee_schedules.down.sql  20260419120400_seed_akc_fee_schedules.up.sql  20260419120500_create_canonical_classes.down.sql  20260419120500_create_canonical_classes.up.sql  20260419120600_seed_canonical_classes.up.sql  20260419130000_create_clubs.down.sql  20260419130000_create_clubs.up.sql  20260419130100_create_users.down.sql  20260419130100_create_users.up.sql  20260419130200_create_user_club_roles.down.sql  20260419130200_create_user_club_roles.up.sql  20260419130300_enable_rls_and_grants.down.sql  20260419130300_enable_rls_and_grants.up.sql  20260419140000_tighten_clubs_with_check.down.sql  20260419140000_tighten_clubs_with_check.up.sql  20260419140100_create_events_and_days.down.sql  20260419140100_create_events_and_days.up.sql  20260419140200_create_trials_and_class_offerings.down.sql  20260419140200_create_trials_and_class_offerings.up.sql  20260419140300_create_judges.down.sql  20260419140300_create_judges.up.sql  20260419140400_create_judge_assignments_and_awards.down.sql  20260419140400_create_judge_assignments_and_awards.up.sql  20260419140500_enable_rls_on_event_setup.down.sql  20260419140500_enable_rls_on_event_setup.up.sql  20260420120000_fix_reference_day_restrict.down.sql  20260420120000_fix_reference_day_restrict.up.sql  20260420120100_create_owners.down.sql  20260420120100_create_owners.up.sql  20260420120200_create_dogs_titles_and_participation.down.sql  20260420120200_create_dogs_titles_and_participation.up.sql  20260420120300_create_teams.down.sql  (+84 more)
db/seed/akc/: README.md  akc_overrides_added.csv  breed_groups.csv  breed_varieties.csv  breeds.csv  canonical_classes.csv  clean_extracts.py  combined_award_group_classes.csv  combined_award_groups.csv  countries.csv  jump_heights.csv  legacy_akc_country_codes.csv  non_akc_title_suffix_breed_restrictions.csv  non_akc_title_suffixes.csv  obedience_class_exercises.csv  obedience_exercises.csv  om_points.csv  otch_points.csv  rally_rach_points.csv  states.csv  title_prefixes.csv  title_suffixes.csv  trial_time_calculations.csv
db/seed/akc/akc_forms/: README.md
db/seed/akc/post_mvp/: README.md  akc_xml_class_codes.csv  akc_xml_jump_heights.csv
db/seed/akc/regulations/: README.md
db/seed/akc/sample_artifacts/: README.md
docs/: ARCHITECTURE.md  CLAUDE.md  DATA_MODEL.md  DOMAIN_GLOSSARY.md  PROJECT_CHARTER.md  PROJECT_STATUS.md  README.md  REQUIREMENTS.md  ROADMAP.md  WORKFLOWS.md
docs/for-deborah/: 2026-04-26-data-model-walkthrough.md  2026-04-26-decisions-for-your-review.md  2026-04-26-glossary-plain-english.md  README.md
docs/research/: 2026-04-19-deborah-artifacts-and-akc-submission.md  2026-04-19-questions-for-deborah.md  2026-04-23-deborah-round-2-answers.md  2026-04-25-pr-2d-checkpoint-0-design-note.md  2026-04-25-pr-2d-checkpoint-0-state-verification.md
scripts/: db-migrate.sh  smoke-compose.sh
shared/: Cargo.toml
shared/src/: fk_validation.rs  lib.rs  tenancy.rs  testing.rs  tracing_init.rs
shared/tests/: combined_award_rls.rs  entry_layer_rls.rs  event_setup_rls.rs  reference_seed.rs  tenancy_rls.rs  tenant_fk_validation.rs  tenant_scoped_gap_fill_rls.rs
workers/: Cargo.toml
workers/src/: lib.rs  main.rs
workers/src/seed_loader/: csv_rows.rs  mod.rs  tables.rs
workers/tests/: seed_loader.rs
