[workspace]
resolver = "3"
members = ["api", "workers", "shared"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
