[workspace]
resolver = "3"
members = ["api", "workers", "shared"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "2"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
