[package]
name = "offleash-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "offleash-api"
path = "src/main.rs"

[dependencies]
offleash-shared = { path = "../shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
