[package]
name = "qtrial-workers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "qtrial-workers"
path = "src/main.rs"

[dependencies]
qtrial-shared = { path = "../shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
